# bfm-sincem

./: .gitignore  README.md
.github/workflows/: bfm-core-run.yml  bfm-manuals-pdf.yml  gfortran-ci.inc
build_34/: bfm_configure.sh
compilers/: gfortran.inc  gfortran_debug.inc  gfortran_ubuntu.inc  ifort.2018.inc  ifort.inc  ifort_debug.inc  x86_64.LINUX.gfortran.inc  x86_64.LINUX.intel.dbg.inc  x86_64.LINUX.intel.inc
doc/fabm/: bfm-fabm-references.bib  bfm-fabm.lyx
doc/manual/: bfm-manual-references.bib  bfm-manual.lyx
doc/mitgcm/: bfm-mitgcm-references.bib  bfm-mitgcm.lyx
doc/nemo/: bfm-nemo-references.bib  bfm-nemo.lyx
doc/ogstm/: bfm-ogstm-references.bib  bfm-ogstm.lyx
doc/pom/: bfm-pom-references.bib  bfm-pom.lyx  bfm-pom1D-references.bib  bfm-pom1D.lyx
doc/schemes/: bfm_ecosystem_schemes.odp  bfm_memory_V5.odg  scheme_coupling.odg
include/: BFM_module_list.proto.h  version.h
inputs/pom_MA21/: ClimaS_MA21_16m.da  ClimaT_MA21_16m.da  heatflux.da  radiance_daily_Mussap.da
src/fabm/: CMakeLists.txt  CalciteDissolution.F90  MesoZoo.F90  MicroZoo.F90  PelBac.F90  PelChem.F90  PelOxygen.F90  PelagicCSYS.F90  Phyto.F90  README.md  bfm_pelagic_base.F90  fabm_monospectral.yaml  for_yaml.txt  getrmud.F90  lidata.F90  light.F90  light_spectral.F90  ogs_model_library.F90  shared.F90  zenith_angle.F90
src/fabm/AUX_SCRIPTS/: python_gotm_yaml.py  python_gotm_yaml_multifile.py  python_light_spectral.py
src/gotm/: bio_bfm.F90
src/mitgcm/: BFMcoupler_LOAD.h  BFMcoupler_OPTIONS.h  BFMcoupler_VARS.h  BFMcoupler_calc_tendency.F  README.md  (+7 more)
tools/: README.md
(+500 files in other folders)
